# langchain-pdf-rag

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/models/: models.py
backend/app/services/: rag_service.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: main.py
