[tool.poetry]
name = "langchain-pdf-rag-backend"
version = "1.0.0"
description = "LangChain PDF RAG - Backend"
authors = ["Vikram Salunkhe <vikramsalunkhe256@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
langchain-openai = "^0.3.7"
langchain-core = "^0.3.40"
langchain-chroma = "^0.2.2"
langchain-text-splitters = "^0.3.6"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
pypdf = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
