[tool.poetry]
name = "langchain-pdf-rag-frontend"
version = "1.0.0"
description = "LangChain PDF RAG - Frontend"
authors = ["Vikram Salunkhe <vikramsalunkhe256@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
